# spvgen

./: CHANGES  CMakeLists.txt  README.md
.github/workflows/: rebase.yml
include/: spvgen.h  vfx.h
source/: spvgen.cpp  vfxEnumsConverter.cpp  vfxParser.cpp  vfxParser.h  vfxPipelineDoc.cpp  vfxSection.cpp  vfxSection.h
